--- a/source/_posts/詹韬的简历.md
+++ b/source/_posts/詹韬的简历.md
@@ -1,5 +1,6 @@
 ---
-title: My resume
+title: My Resume
+date: 2016-06-13
 ---
 
 ### 个人信息
@@ -9,6 +10,7 @@ title: My resume
 手机: 13161472239
 年龄: 21
 邮箱: 609448234@qq.com
+Github: http://github.com/cacivy
 ```
 
 <!-- more -->
@@ -17,9 +19,9 @@ title: My resume
 
 + 前端
 
-    ​熟练 JQuery  AvalonJS VueJS WebPack ES6 BootStrap
+    ​熟练 JQuery AvalonJS VueJS WebPack ES6 BootStrap CSS3动画
 
-    ​了解 MVVM(Vue | Avalon |Augular) Components(React | Vue | Vuex) Grunt Fetch Promise Flex
+    ​了解 MVVM(Vue | Avalon |Augular) Components(React | Vue | Vuex) Gulp Yeoman Fetch Promise
 
 + 后端
 
