--- a/source/_posts/詹韬-前端工程师-简历.md
+++ b/source/_posts/詹韬-前端工程师-简历.md
@@ -20,6 +20,7 @@ date: 2018-03-01
   Github: https://github.com/cacivy
   job title：前端高级工程师，专注于前段工程化以及数据可视化方向
   salary: 20k~25k
+  address: 北京
 }
 ```
 
